monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  tls:
    - secretName: grafana-tls
      hosts:
        - grafana.home.ruchij.com
  rules:
    - host: grafana.home.ruchij.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
